--- a/front/assets/styles/main.scss
+++ b/front/assets/styles/main.scss
@@ -2,4 +2,7 @@
 @import "partials/base";
 
 // Partials
-@import "partials/side-nav";
+@import "partials/greeting-box";
+
+//Vendors
+@import "vandors/bootstrap-custom";
