--- a/front/assets/styles/vandors/dropzone-custom.scss
+++ b/front/assets/styles/vandors/dropzone-custom.scss
@@ -2,14 +2,20 @@
   width: 100%;
   height: 192px;
   text-align: center;
-  background: url("../images/avatar.png")no-repeat center center;
+  background: url("../images/avatar.png") no-repeat center center;
   border-radius: 100%;
-  background-size: cover;
+  background-size: contain;
   position: relative;
-  top: -15px;
-  .btn{
+  .btn {
     position: relative;
     top: 100%;
     white-space: initial;
+  }
+}
+
+#registration {
+  .dropzone {
+    top: -15px;
+    background-size: cover;
   }
 }
