Added categories in menu styling.

--- a/front/assets/styles/main.scss
+++ b/front/assets/styles/main.scss
@@ -4,6 +4,7 @@
 // Partials
 @import "partials/greeting-box";
 @import "partials/profile";
+@import "partials/menu";
 
 //Vendors
 @import "vandors/bootstrap-custom";
