--- a/front/assets/styles/main.scss
+++ b/front/assets/styles/main.scss
@@ -7,5 +7,7 @@
 @import "partials/profile";
 
 //Vendors
-@import "vandors/bootstrap-custom";
-@import "vandors/dropzone-custom";
+@import "vendors/bootstrap-custom";
+@import "vendors/dropzone-custom";
+@import '../../node_modules/react-big-calendar/lib/css/react-big-calendar.css';
+@import "vendors/react-big-calendar-custom";
