Added custom views - layout, navigation, content, panel

--- a/front/assets/styles/modules/_colors.scss
+++ b/front/assets/styles/modules/_colors.scss
@@ -5,3 +5,5 @@ $table-background: rgba(34,34,34,0.61);
 $profile-background: #fff;
 $calendar-body-background: #ccc;
 $main-background: #222222;
+
+$panel-button-border: #b9b9b9;
