Added FiledGroup element

--- a/front/assets/styles/modules/_colors.scss
+++ b/front/assets/styles/modules/_colors.scss
@@ -1,9 +1,12 @@
 // side-nav colors
 $active-tab-background: #502634;
 $active-tab-text: #fff;
-$table-background: rgba(34,34,34,0.61);
+$table-background: rgba(34, 34, 34, 0.9);
 $profile-background: #fff;
 $calendar-body-background: #ccc;
 $main-background: #222222;
 
 $panel-button-border: #b9b9b9;
+$tab-pill-border: #222222;
+$active-tab-pill: rgba(79, 38, 52, 0.9);
+$inactive-tab-pill-text: #adadad
