Added forms for reservation and dish info page

--- a/front/assets/styles/modules/_mixins.scss
+++ b/front/assets/styles/modules/_mixins.scss
@@ -14,6 +14,15 @@
         &:nth-child(2) {
           width: $secondWidth;
         }
+        a {
+          color: white;
+          text-decoration: underline;
+        }
+      }
+      button {
+        a {
+          text-decoration: none;
+        }
       }
       &.modify {
         td {
