--- a/front/assets/styles/main.scss
+++ b/front/assets/styles/main.scss
@@ -3,7 +3,8 @@
 
 // Partials
 @import "partials/profile";
-@import "partials/greeting.scss";
+@import "partials/greeting";
+@import "partials/errors";
 
 //Vendors
 @import "vendors/bootstrap-custom";
